syntax = "proto3";
package team;
option go_package = "github.com/zenpk/dorm-system/internal/service/team";

import "common.proto";
import "user.proto";

service Team{
  rpc Create (CreateRequest) returns (CreateReply){}
  rpc Get (GetRequest) returns (GetReply){}
  rpc Join (JoinRequest) returns (JoinReply){}
  rpc Leave (LeaveRequest) returns (LeaveReply){}
}

message TeamInfo{
  uint64 id = 1;
  string code = 2;
  string gender = 3;
  user.UserInfo owner = 4;
  repeated user.UserInfo members = 5;
}

message CreateRequest{
  uint64 userId = 1;
}

message CreateReply{
  common.CommonResponse err = 1;
  string code = 2;
}

message JoinReply{
  common.CommonResponse err = 1;
}

message GetRequest{
  uint64 userId = 1;
}

message GetReply{
  common.CommonResponse err = 1;
  TeamInfo team = 2;
}

message JoinRequest{
  uint64 userId = 1;
  string code = 2;
}

message LeaveRequest{
  uint64 userId = 1;
}

message LeaveReply{
  common.CommonResponse err = 1;
  user.UserInfo newOwner = 2;
}
